--- a/src/locale/messages.es.json
+++ b/src/locale/messages.es.json
@@ -9,6 +9,9 @@
     "nav_join": "ÚNETE GRATIS",
     "nav_menu_new_question": "Haz una pregunta",
     "nav_menu_login": "Entrar",
-    "nav_menu_register": "Registrarse"
+    "nav_menu_register": "Registrarse",
+    "footer_author": "Hecho por kurovale.",
+    "footer_license": "Código bajo licencia MIT.",
+    "footer_silvervale": "Ve y sigue a una lindura. 💙"
   }
 }
