--- a/src/locale/messages.es.json
+++ b/src/locale/messages.es.json
@@ -12,6 +12,7 @@
     "nav_menu_register": "Registrarse",
     "footer_author": "Hecho por kurovale.",
     "footer_license": "Código bajo licencia MIT.",
-    "footer_silvervale": "Ve y sigue a una lindura. 💙"
+    "footer_silvervale": "Ve y sigue a una lindura. 💙",
+    "home-component_title": "shiro-questions | Pregunte con confianza"
   }
 }
