--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -12,6 +12,7 @@
     "nav_menu_register": "Register",
     "footer_author": "Made by kurovale.",
     "footer_license": "Code licensed under an MIT-style License.",
-    "footer_silvervale": "Go follow someone cute. 💙"
+    "footer_silvervale": "Go follow someone cute. 💙",
+    "home-component_title": "shiro-questions | Ask with confidence"
   }
 }
