Add home categories icons / nav defer content

--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -15,6 +15,6 @@
     "footer_silvervale": "Go follow someone cute. 💙",
     "home-component_title": "shiro-questions | Ask with confidence",
     "home_desc": "A place to ask with confidence",
-    "all_categories": "All categories"
+    "cat_all_categories": "All categories"
   }
 }
