--- a/src/locale/messages.es.json
+++ b/src/locale/messages.es.json
@@ -15,6 +15,6 @@
     "footer_silvervale": "Ve y sigue a una lindura. 💙",
     "home-component_title": "shiro-questions | Pregunte con confianza",
     "home_desc": "Un lugar para preguntar con confianza",
-    "all_categories": "Todas las categorías"
+    "cat_all_categories": "Todas las categorías"
   }
 }
