--- a/src/locale/messages.es.json
+++ b/src/locale/messages.es.json
@@ -12,7 +12,7 @@
     "register": "Registrarse",
     "footer_author": "Hecho por kurovale 2024.",
     "footer_license": "Código bajo licencia MIT.",
-    "footer_silvervale": "Ve y sigue a una lindura. 💙",
+    "footer_silvervale": "Sigue a Silvervale. 💙",
     "home-component_title": "shiro-questions | Pregunte con confianza",
     "home_desc": "Un lugar para preguntar con confianza",
     "cat_all_categories": "Todas las categorías",
