--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -12,7 +12,7 @@
     "register": "Register",
     "footer_author": "Made by kurovale 2024.",
     "footer_license": "Code licensed under an MIT-style License.",
-    "footer_silvervale": "Go follow someone cute. 💙",
+    "footer_silvervale": "Follow Silvervale. 💙",
     "home-component_title": "shiro-questions | Ask with confidence",
     "home_desc": "A place to ask with confidence",
     "cat_all_categories": "All categories",
