--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -42,6 +42,8 @@
     "password": "Password",
     "keepme_logged": "Keep me logged in",
     "login_title": "Welcome again",
-    "login_subtitle": "Get answers to your questions now"
+    "login_subtitle": "Get answers to your questions now",
+    "register_to_login": "Already have an account? {$START_TAG_SPAN}Log in{$CLOSE_TAG_SPAN}",
+    "login_to_register": "Don't have an account? {$START_TAG_SPAN}Sign up{$CLOSE_TAG_SPAN}"
   }
 }
