Add token interceptor

--- a/src/locale/messages.es.json
+++ b/src/locale/messages.es.json
@@ -49,6 +49,7 @@
     "error_credentials": "Credenciales inválidas",
     "error_fail_register": "Error al registrarse",
     "error_fail_login": "Error al iniciar sesión",
-    "error_username_taken": "Username already exists"
+    "error_username_taken": "Username already exists",
+    "error_current_user": "Error al obtener sus datos, por favor inicie sesión de nuevo"
   }
 }
