--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -52,6 +52,10 @@
     "error_username_taken": "Username already exists",
     "error_current_user": "Error getting your data, please log in again",
     "login-component_title": "Log in | shiro-questions",
-    "register-component_title": "Register | shiro-questions"
+    "register-component_title": "Register | shiro-questions",
+    "login_desc": "Log in to the best place for asking your questions",
+    "profile_title": "Your profile",
+    "register_desc": "Register to the best place for asking your questions",
+    "profile_desc": "Your personal profile in shiro-questions!"
   }
 }
