--- a/src/locale/messages.es.json
+++ b/src/locale/messages.es.json
@@ -83,6 +83,13 @@
     "error_body_maxlength": "Su pregunta debe tener menos de 1000 caracteres",
     "error_category_required": "La categoría es obligatoria",
     "error_getUserQuestions": "Error en la búsqueda de sus preguntas",
-    "error_createQuestions": "Error al crear la pregunta"
+    "error_createQuestions": "Error al crear la pregunta",
+    "error_editQuestions": "Error al editar esta pregunta",
+    "ask_question_title_edit": "Edita tu pregunta",
+    "ask_question_submit_edit": "EDITAR",
+    "error_solveQuestions": "Error al resolver su pregunta",
+    "error_deleteQuestion": "Error al borrar su pregunta",
+    "delete_question_confirmation": "¿Quieres borrar esta pregunta?",
+    "close": "Cerrar"
   }
 }
