--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -83,6 +83,13 @@
     "error_body_maxlength": "Your question must be less than 1000 characters long",
     "error_category_required": "Category is required",
     "error_getUserQuestions": "Error fetching your questions",
-    "error_createQuestions": "Error creating the question"
+    "error_createQuestions": "Error creating the question",
+    "error_editQuestions": "Error editing this question",
+    "ask_question_title_edit": "Edit your question",
+    "ask_question_submit_edit": "EDIT",
+    "error_solveQuestions": "Error solving your question",
+    "error_deleteQuestion": "Error deleting your question",
+    "delete_question_confirmation": "Do you want to delete this question?",
+    "close": "Close"
   }
 }
