--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -58,7 +58,7 @@
     "profile_desc": "Your personal profile in shiro-questions!",
     "profile": "Profile",
     "questions": "Questions",
-    "profile_emptyquestions": "You still haven't asked anything",
+    "emptyquestions": "Questions not found",
     "profile_picture": "Profile picture",
     "solved": "Solved",
     "unsolved": "Unsolved",
@@ -90,6 +90,7 @@
     "error_solveQuestions": "Error solving your question",
     "error_deleteQuestion": "Error deleting your question",
     "delete_question_confirmation": "Do you want to delete this question?",
-    "close": "Close"
+    "close": "Close",
+    "error_searchQuestions": "Error while searching questions"
   }
 }
