--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -91,6 +91,7 @@
     "error_deleteQuestion": "Error deleting your question",
     "delete_question_confirmation": "Do you want to delete this question?",
     "close": "Close",
-    "error_searchQuestions": "Error while searching questions"
+    "error_searchQuestions": "Error while searching questions",
+    "error_getQuestion": "Error while fetching this question"
   }
 }
