--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -92,6 +92,12 @@
     "delete_question_confirmation": "Do you want to delete this question?",
     "close": "Close",
     "error_searchQuestions": "Error while searching questions",
-    "error_getQuestion": "Error while fetching this question"
+    "error_getQuestion": "Error while fetching this question",
+    "add_answer": "{$START_TAG_MAT_ICON}{$CLOSE_TAG_MAT_ICON} Add answer ",
+    "add_answer_label": "Type your answer...",
+    "error_answer_required": "Your answer is required",
+    "error_answer_minlength": "Your answer must be greater than 3 characters long",
+    "error_answer_maxlength": "Your answer must be less than 1000 characters long",
+    "error_addAnswer": "Error creating the answer"
   }
 }
