--- a/src/locale/messages.es.json
+++ b/src/locale/messages.es.json
@@ -102,6 +102,7 @@
     "explore": "Explorar",
     "search": "Búsqueda",
     "questions_desc": "¡Buscar preguntas en shiro-questions!",
-    "question_detail_desc": "¡Necesitamos tu ayuda para resolver esta pregunta!"
+    "question_detail_desc": "¡Necesitamos tu ayuda para resolver esta pregunta!",
+    "error_getAnswers": "Error al obtener las respuestas a esta pregunta"
   }
 }
