--- a/src/locale/messages.es.json
+++ b/src/locale/messages.es.json
@@ -103,6 +103,7 @@
     "search": "Búsqueda",
     "questions_desc": "¡Buscar preguntas en shiro-questions!",
     "question_detail_desc": "¡Necesitamos tu ayuda para resolver esta pregunta!",
-    "error_getAnswers": "Error al obtener las respuestas a esta pregunta"
+    "error_getAnswers": "Error al obtener las respuestas a esta pregunta",
+    "total_answers": "Respuestas ({$INTERPOLATION})"
   }
 }
