--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -103,6 +103,7 @@
     "search": "Search",
     "questions_desc": "Search questions in shiro-questions!",
     "question_detail_desc": "We need your help to solve this question!",
-    "error_getAnswers": "Error getting this question's answers"
+    "error_getAnswers": "Error getting this question's answers",
+    "total_answers": "Answers ({$INTERPOLATION})"
   }
 }
