Add delete answer

--- a/src/locale/messages.es.json
+++ b/src/locale/messages.es.json
@@ -106,6 +106,8 @@
     "error_getAnswers": "Error al obtener las respuestas a esta pregunta",
     "total_answers": "Respuestas ({$INTERPOLATION})",
     "error_addUpvote": "Error al votar esta respuesta",
-    "error_addDownVote": "Error al votar esta respuesta negativamente"
+    "error_addDownVote": "Error al votar esta respuesta negativamente",
+    "delete_answer_confirmation": "¿Quieres borrar esta respuesta?",
+    "error_deleteAnswer": "Error al borrar esta respuesta"
   }
 }
