--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -106,6 +106,8 @@
     "error_getAnswers": "Error getting this question's answers",
     "total_answers": "Answers ({$INTERPOLATION})",
     "error_addUpvote": "Error while up-voting this answer",
-    "error_addDownVote": "Error while down-voting this answer"
+    "error_addDownVote": "Error while down-voting this answer",
+    "delete_answer_confirmation": "Do you want to delete this answer?",
+    "error_deleteAnswer": "Error deleting this answer"
   }
 }
