--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -108,6 +108,7 @@
     "error_addUpvote": "Error while up-voting this answer",
     "error_addDownVote": "Error while down-voting this answer",
     "delete_answer_confirmation": "Do you want to delete this answer?",
-    "error_deleteAnswer": "Error deleting this answer"
+    "error_deleteAnswer": "Error deleting this answer",
+    "error_editAnswer": "Error editing this answer"
   }
 }
