--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -109,6 +109,12 @@
     "error_addDownVote": "Error while down-voting this answer",
     "delete_answer_confirmation": "Do you want to delete this answer?",
     "error_deleteAnswer": "Error deleting this answer",
-    "error_editAnswer": "Error editing this answer"
+    "error_editAnswer": "Error editing this answer",
+    "yes": "Yes",
+    "no": "No",
+    "ai_answer_label": "Would you like to see an AI-generated response?",
+    "ai_start": "Trying to get the AI model",
+    "ai_loading": "Loading the AI model from cache",
+    "ai_fetching": "Downloading the AI model"
   }
 }
